--- a/style.css
+++ b/style.css
@@ -76,11 +76,18 @@ body {
   transform: translateY(
     -50%
   ); /*Alinhamento de sobreposição absoluta no eixo y*/
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  /*right: 0;
+  left: initial;*/
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -165,5 +172,24 @@ footer {
   }
   .light {
     --img: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/*Animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
