--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 .light {
   --text-color: black;
-  --img: url(./assets/bg-mobile-light.jpg);
+  --img: url(./assets/bg-mobile-w.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -171,7 +171,7 @@ footer {
     --img: url(./assets/bg-desktop.jpg);
   }
   .light {
-    --img: url(./assets/bg-desktop-light.jpg);
+    --img: url(./assets/bg-desktop-w.jpg);
     --text-color: black;
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
